# ml-model-optimization

./: .gitignore  cpu_light_glue_test.ipynb  cpu_test.ipynb  gpu_env.yaml  gpu_light_glue_test.ipynb  gpu_test.ipynb  main-v1.py  main.py  neural.ipynb  openvino_ultralytics_outputs.pkl  pyproject.toml  pytorch_ultralytics_outputs.pkl  requirements.txt  result.ipynb  run.ipynb
app/: yolov9.py  yolov9_onnxruntime.py  yolov9_onnxruntime_test.py  yolov9_openvino.py
app/LightGlue/: demo.ipynb
app/LightGlue-ONNX-main/: .gitignore  demo.ipynb
app/LightGlue-ONNX-main/docs/: README.zh.md
app/LightGlueOnnx/: demo.ipynb  eval.py  export.py  infer.py  optimize.py  requirements-onnx.txt  trt_infer.py
app/LightGlueOnnx/docs/: README.zh.md
app/saved_pkl/: cpu_df.pkl  cpu_infer_df.pkl  cpu_lg_df.pkl  gpu_df.pkl  gpu_infer_df.pkl  gpu_lg_df.pkl
app/util/: Differ.py  timer.py  util.py
app/weights/: metadata.yaml
app/yolov9_ultralytics/: __init__.py
app/yolov9_ultralytics/cfg/: __init__.py
app/yolov9_ultralytics/data/: annotator.py  augment.py  base.py  build.py  converter.py  dataset.py  loaders.py  split_dota.py  utils.py
app/yolov9_ultralytics/engine/: exporter.py  model.py  predictor.py  results.py  trainer.py  tuner.py  validator.py
app/yolov9_ultralytics/hub/: __init__.py  auth.py  session.py  utils.py
app/yolov9_ultralytics/models/: __init__.py
app/yolov9_ultralytics/nn/: autobackend.py  tasks.py
app/yolov9_ultralytics/solutions/: ai_gym.py  distance_calculation.py  heatmap.py  object_counter.py  parking_management.py  (+2 more)
env/: cpu_env.yaml
(+71 files in other folders)
