[tool.poetry]
name = "yolov9"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "1.26.4"
onnxruntime = "^1.17.3"
pyrootutils = "^1.0.4"
pyyaml = "^6.0.1"
ultralytics = "^8.2.9"
opencv-python = "^4.9.0.80"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
